# RSP

indurop/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  modules.xml
indurop/.gitlab/merge_request_templates/: default.md
indurop/cmake/: FindXenomai.cmake  HunterConfig.cmake  add_shared_variables.cmake  config.cmake.in  dependency.cmake  install_interface_includes.cmake  preinstall_dependency.cmake
indurop/debugger/: CMakeLists.txt
indurop/dependency/bicomc/include/bicomc/detail/: method_call.h  method_traits.h
indurop/event-handler/: CMakeLists.txt
indurop/event-handler/include/: dummy.h
indurop/examples/: CMakeLists.txt
indurop/examples/alias/: CMakeLists.txt  device.glb  driver.cpp  monitor.cpp
indurop/examples/hello-world/: CMakeLists.txt  hello.glb  main.cpp
indurop/examples/lifecycle/: CMakeLists.txt  main.cpp
indurop/examples/process-module1/: CMakeLists.txt  main.cpp
indurop/examples/sporadic-process1/: CMakeLists.txt  main.cpp
indurop/examples/thread-module1/: CMakeLists.txt  main.cpp
indurop/io-dispatcher/: CMakeLists.txt
indurop/ivgen/: CMakeLists.txt  ivgen.py
indurop/middleware/: CMakeLists.txt  modules.xml
indurop/middleware/include/: Module.hpp  scheduler.hpp  xmlParsing.hpp
indurop/middleware/src/: Module.cpp  main.cpp  scheduler.cpp  xmlParsing.cpp
indurop/middleware/src/server/: api_handler.cpp  api_handler.h  api_server.cpp  api_server.h
indurop/middleware/src/util/: environment.cpp  environment.h
indurop/middleware/src/variable/: memory_block.cpp  memory_block.h  variable_manager.cpp  variable_manager.h
modules/: CMakeLists.txt  module1.cpp  module1.cpp~  module2.cpp  module2.cpp~  modules.xml  modules.xml~  monitor.glb
modules/var/: InduRoP-Shared-Variable.txt
