
cmake_minimum_required(VERSION 3.0)

project(ivgen)

install(PROGRAMS ${CMAKE_CURRENT_LIST_DIR}/ivgen.py
	DESTINATION ${RUNTIME_INSTALL_DIR}
	PERMISSIONS
		OWNER_READ OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE
		WORLD_READ WORLD_EXECUTE
)

install(FILES "${CMAKE_SOURCE_DIR}/cmake/add_shared_variables.cmake"
	DESTINATION ${CONFIG_INSTALL_DIR}
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
)
